--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -23,7 +23,7 @@ img {
     max-width: 1400px;
     width: 90%;
     margin: 0 auto;
-    // border: 1px solid wheat;
+    // border: 1px solid brown;
 }
 
 h2 {
@@ -49,20 +49,13 @@ section {
     padding: 50px 0;
 }
 
-// i {
-//     font-size: 6rem;
-// }
-
-// .iconify {
-//     font-size: 7rem;
-// }
-
 .typed-cursor {
     display: none;
 }
 
 footer {
     font-size: 1.6rem;
+    letter-spacing: 1px;
     text-align: center;
     padding: 10px 0;
 }
