--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -29,7 +29,7 @@ header {
     }
 
     .heading {
-        // border: 1px solid wheat;
+        // border: 1px solid brown;
         text-align: center;
         position: absolute;
         top: 50%;
