--- a/styles/partials/_mixin.scss
+++ b/styles/partials/_mixin.scss
@@ -6,7 +6,7 @@ $primaryTextColour: #fafafa;
 $inactiveTextColour: #ababab;
 
 // $backgroundColour: #030200;
-$iconHoverColour: #f26b38;
+// $iconHoverColour: #f26b38;
 
 //== MIXINS ==//
 @mixin blink {
