--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -3,13 +3,17 @@
         display: flex;
 
         // div {
-        //     border: 1px solid crimson;
+        //     border: 1px solid brown;
         // }
 
         p {
             line-height: 1.6;
             text-align: justify;
             padding-bottom: 20px;
+
+            &:last-child {
+                padding-bottom: 0;
+            }
         }
     }
 }
