--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -3,56 +3,47 @@
         display: grid;
         grid-template-columns: 1fr 2fr;
         gap: 20px;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid $primaryTextColour;
 
         // div {
         //     border: 1px solid brown;
         // }
 
-        // .screenshot {
-        //     //REMOVE CLASS FROM HTML
-        //     width: 500px;
-        // }
-
         img {
-
             padding: 20px 0;
         }
         
         .description {
-            border-left: 1px solid white;
-            // padding: 20px 0 0 20px;
+            border-left: 1px solid $primaryTextColour;
             padding: 20px 0 50px 20px;
 
             h3 {
                 text-transform: uppercase;
+                padding-bottom: 15px;
             }
 
             p {
                 text-align: justify;
+                padding-bottom: 20px;
 
                 &:nth-of-type(2) {
+                    text-transform: uppercase;
+                    letter-spacing: 3px;
                     padding-bottom: 30px;
                 }
             }
 
-            h3, p {
-                padding-bottom: 15px;
-            }
-
             a {
-                background-color: $primaryTextColour;
-                color: $backgroundColour;
-                // background-color: crimson;
-                // color: white;
+                border: 1px solid $primaryTextColour;
+                background-color: transparent;
+                color: $primaryTextColour;
+                // text-align: center;
                 padding: 5px 10px;
                 margin-right: 10px;
 
-                text-align: center;
-
                 &:hover, &:active, &:focus {
-                    background-color: $backgroundColour;
-                    color: $primaryTextColour;
+                    background-color: $primaryTextColour;
+                    color: $backgroundColour;
                 }
             }
         }
