--- a/styles/style.css
+++ b/styles/style.css
@@ -248,6 +248,7 @@ section {
 
 footer {
   font-size: 1.6rem;
+  letter-spacing: 1px;
   text-align: center;
   padding: 10px 0;
 }
@@ -379,6 +380,10 @@ header .fa-mouse {
   padding-bottom: 20px;
 }
 
+.about .aboutSection p:last-child {
+  padding-bottom: 0;
+}
+
 .skills .icons {
   display: -ms-grid;
   display: grid;
@@ -448,7 +453,7 @@ header .fa-mouse {
   -ms-grid-columns: 1fr 2fr;
       grid-template-columns: 1fr 2fr;
   gap: 20px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #fafafa;
 }
 
 .projects .project img {
@@ -456,37 +461,37 @@ header .fa-mouse {
 }
 
 .projects .project .description {
-  border-left: 1px solid white;
+  border-left: 1px solid #fafafa;
   padding: 20px 0 50px 20px;
 }
 
 .projects .project .description h3 {
   text-transform: uppercase;
+  padding-bottom: 15px;
 }
 
 .projects .project .description p {
   text-align: justify;
+  padding-bottom: 20px;
 }
 
 .projects .project .description p:nth-of-type(2) {
+  text-transform: uppercase;
+  letter-spacing: 3px;
   padding-bottom: 30px;
 }
 
-.projects .project .description h3, .projects .project .description p {
-  padding-bottom: 15px;
-}
-
 .projects .project .description a {
-  background-color: #fafafa;
-  color: #212121;
+  border: 1px solid #fafafa;
+  background-color: transparent;
+  color: #fafafa;
   padding: 5px 10px;
   margin-right: 10px;
-  text-align: center;
 }
 
 .projects .project .description a:hover, .projects .project .description a:active, .projects .project .description a:focus {
-  background-color: #212121;
-  color: #fafafa;
+  background-color: #fafafa;
+  color: #212121;
 }
 
 .projects .projectFour {
@@ -494,9 +499,7 @@ header .fa-mouse {
 }
 
 .blog .post {
-  border: 1px solid white;
-  height: 200px;
-  width: 400px;
+  border: 1px solid #fafafa;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -510,11 +513,13 @@ header .fa-mouse {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 200px;
+  width: 400px;
 }
 
 .blog .post a {
   font-size: 2.5rem;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #fafafa;
   padding-bottom: 5px;
   margin-bottom: 20px;
 }
@@ -537,14 +542,14 @@ header .fa-mouse {
 }
 
 .social form input, .social form textarea, .social form button {
-  border: 1px solid white;
-  background: transparent;
+  border: 1px solid #fafafa;
+  background-color: transparent;
   color: #fafafa;
   margin-bottom: 20px;
 }
 
 .social form input:focus, .social form textarea:focus, .social form button:focus {
-  outline: 2px solid white;
+  outline: 2px solid #fafafa;
 }
 
 .social form input {
@@ -575,6 +580,8 @@ header .fa-mouse {
 }
 
 .social form + div p {
+  line-height: 1.3;
+  letter-spacing: 1px;
   padding-bottom: 20px;
 }
 
@@ -583,19 +590,16 @@ header .fa-mouse {
 }
 
 .social form + div a {
-  margin-right: 20px;
-}
-
-.social form + div a:hover, .social form + div a:active, .social form + div a:focus {
-  color: #f26b38;
+  margin-right: 15px;
 }
 
 .social form + div a i {
-  font-size: 5rem;
+  font-size: 4.5rem;
 }
 
-.social form + div a path:hover {
-  fill: #f26b38;
+.social form + div a i:hover, .social form + div a i:active, .social form + div a i:focus {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media (max-width: 1160px) {
