miscellaneous portfolio updates :white_heart:

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -50,6 +50,7 @@ header {
     }
 
     .fa-mouse {
+        // border: 1px solid brown;
         font-size: 4rem;
         color: $primaryTextColour;
         display: block;
