--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -6,9 +6,17 @@
         //     border: 1px solid brown;
         // }
 
+        .profile {
+            width: 80%;
+
+            img {
+                border-radius: 5px;
+            }
+        }
+
         p {
             line-height: 1.6;
-            text-align: justify;
+            margin-left: 50px;
             padding-bottom: 20px;
 
             &:last-child {
