--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -29,8 +29,8 @@
     
         button {
             text-transform: uppercase;
-            padding: 5px 25px;
             margin: 0 auto 0 0;
+            padding: 5px 25px;
             cursor: pointer;
     
             &:hover, &:active, &:focus {
@@ -43,7 +43,6 @@
 
     form + div {
         // border: 1px solid brown;
-        text-align: justify;
         padding-left: 50px;
 
         p {
@@ -59,10 +58,6 @@
         a {
             margin-right: 15px;
 
-            // &:hover, &:active, &:focus {
-            //     // color: $iconHoverColour;
-            // }
-
             i {
                 font-size: 4.5rem;
 
@@ -71,14 +66,9 @@
                 }
             }
 
-            // path:hover {
-            //     // fill: blue;
-            //     // transform-origin: 50% 50%;
-            //     // transform: translateX(0px) scale(1.5);
-            //     // height: 45px;
-            //     // width: 45px;
-            //     background-color: red;
-            // }
+            svg:hover, svg:active, svg:focus {
+                transform: scale(1.1);
+            }
         }
     }
 }
