--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -10,7 +10,7 @@
         // }
 
         img {
-            padding: 20px 0;
+            padding-top: 20px;
         }
         
         .description {
@@ -22,9 +22,8 @@
                 padding-bottom: 15px;
             }
 
-            p { 
-                text-align: justify;
-                line-height: 1.4;
+            p {
+                line-height: 1.5;
                 padding-bottom: 20px;
 
                 &:nth-of-type(2) {
