--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -10,7 +10,7 @@
         // }
 
         img {
-            padding-top: 20px;
+            padding: 20px 0;
         }
         
         .description {
