--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -70,14 +70,50 @@
     }
 }
 
-@media (max-width: 625px) {
+@media (max-width: 630px) {
     header {
-        ul {
-            li {
-                margin-right: 30px;
-                margin-bottom: 10px;
+        .fa-bars {
+            display: inline-block;
+            color: $inactiveTextColour;
+            font-size: 3rem;
+            text-transform: uppercase;
+            padding-top: 20px;
+            cursor: pointer;
+
+            &:hover, &:active, &:focus {
+                color: $primaryTextColour;
             }
         }
+
+        .menu {
+            display: flex;
+            flex-direction: column;
+            padding-top: 0;
+
+            li {
+                padding-top: 20px;
+            }
+        }
+
+        .background {
+            background-color: black;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 400px;
+            width: 400px;
+            z-index: -1;
+            border-radius: 50%;
+            transform: translate(-45%, -20%);
+        }
+
+        ul {
+            display: none;
+        }
+
+        // .heading {
+        //     transform: translate(-50%, 0%);
+        // }
     }
 }
 
@@ -118,14 +154,6 @@
                         margin-bottom: 10px;
                     }
                 }
-            }
-        }
-    }
-
-    .about {
-        .aboutSection {
-            p {
-                text-align: left;
             }
         }
     }
