--- a/styles/style.css
+++ b/styles/style.css
@@ -297,6 +297,10 @@ header {
   min-height: 100vh;
 }
 
+header .fa-bars {
+  display: none;
+}
+
 header ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -682,10 +686,45 @@ header .fa-mouse {
   }
 }
 
-@media (max-width: 625px) {
-  header ul li {
-    margin-right: 30px;
-    margin-bottom: 10px;
+@media (max-width: 630px) {
+  header .fa-bars {
+    display: inline-block;
+    color: #ababab;
+    font-size: 3rem;
+    text-transform: uppercase;
+    padding-top: 20px;
+    cursor: pointer;
+  }
+  header .fa-bars:hover, header .fa-bars:active, header .fa-bars:focus {
+    color: #fafafa;
+  }
+  header .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 0;
+  }
+  header .menu li {
+    padding-top: 20px;
+  }
+  header .background {
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 400px;
+    width: 400px;
+    z-index: -1;
+    border-radius: 50%;
+    -webkit-transform: translate(-45%, -20%);
+            transform: translate(-45%, -20%);
+  }
+  header ul {
+    display: none;
   }
 }
 
@@ -717,9 +756,6 @@ header .fa-mouse {
   }
   .projects .project .description a:nth-of-type(1), .projects .project .description a:nth-of-type(2) {
     margin-bottom: 10px;
-  }
-  .about .aboutSection p {
-    text-align: left;
   }
   .blog .post {
     max-width: 290px;
