--- a/styles/partials/_hamburgers.scss
+++ b/styles/partials/_hamburgers.scss
@@ -18,7 +18,7 @@
     text-transform: none;
     background-color: transparent;
     overflow: visible;
-    right: -100px;
+    left: -100px;
     border: 0;
     margin: 10px 0 0;
     padding: 15px 0;
