updated hamburger menu :white_heart:

--- a/styles/partials/_hamburgers.scss
+++ b/styles/partials/_hamburgers.scss
@@ -8,8 +8,8 @@
 
 .hamburger {
     // border: 1px solid white;
-    display: inline-block;
-    position: absolute;
+    // display: inline-block;
+    display: none;
     transition-property: opacity, filter;
     transition-duration: 0.15s;
     transition-timing-function: linear;
@@ -18,7 +18,6 @@
     text-transform: none;
     background-color: transparent;
     overflow: visible;
-    left: -100px;
     border: 0;
     margin: 10px 0 0;
     padding: 15px 0;
