--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -77,6 +77,7 @@
         }
 
         .hamburger {
+            display: unset;
             position: relative;
             left: 0;
             z-index: 1;
