--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,9 +5,13 @@ header {
         // border: 1px solid brown;
         display: flex;
         justify-content: flex-end;
-        flex-wrap: wrap;
         text-transform: uppercase;
-        padding-top: 50px;
+        position: fixed;
+        width: 90%;
+        z-index: 1;
+        background-color: $backgroundColour;
+        border-bottom: 5px solid $primaryTextColour;
+        padding: 20px 0;
 
         li {
             margin-right: 50px;
@@ -53,12 +57,10 @@ header {
         // border: 1px solid brown;
         font-size: 4rem;
         color: $primaryTextColour;
-        display: block;
         text-align: center;
         position: absolute;
         bottom: 50px;
-        width: 100%;
+        width: 90%;
         animation: bounce 2s ease infinite;
-        cursor: pointer;
     }
 }
