--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -1,12 +1,62 @@
 @media (max-width: 775px) {
-    header {
-        ul {
-            justify-content: center;
-        }
-    }
-
     h2 {
         text-align: center;
+    }
+
+    section {
+        padding: 50px 0;
+    }
+
+    header {
+        ul {
+            display: none;
+        }
+
+        .hamburger {
+            display: unset;
+            position: relative;
+            left: 0;
+            z-index: 1;
+            border-bottom: 5px solid $primaryTextColour;
+        }
+
+        .menu {
+            position: static;
+            display: flex;
+            flex-direction: column;
+            background: none;
+            border: none;
+            padding: 0;
+
+            li {
+                padding-top: 20px;
+            }
+        }
+
+        .background {
+            background-color: $backgroundColourDark;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 450px;
+            width: 450px;
+            border-radius: 50%;
+            transform: translate(-45%, -15%);
+        }
+
+        .label {
+            font-size: 3.3rem;
+            text-transform: uppercase;
+            color: $inactiveTextColour;
+        }
+
+        .label.active {
+            color: $primaryTextColour;
+        }
+
+        .heading {
+            z-index: -1;
+        }
     }
 
     .about {
@@ -66,56 +116,6 @@
             .top {
                 display: unset;
             }
-        }
-    }
-}
-
-@media (max-width: 630px) {
-    header {
-        ul {
-            display: none;
-        }
-
-        .hamburger {
-            display: unset;
-            position: relative;
-            left: 0;
-            z-index: 1;
-        }
-
-        .menu {
-            display: flex;
-            flex-direction: column;
-            padding-top: 0;
-
-            li {
-                padding-top: 20px;
-            }
-        }
-
-        .background {
-            background-color: $backgroundColourDark;
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 400px;
-            width: 400px;
-            border-radius: 50%;
-            transform: translate(-45%, -15%);
-        }
-
-        .label {
-            font-size: 3.3rem;
-            text-transform: uppercase;
-            color: $inactiveTextColour;
-        }
-
-        .label.active {
-            color: $primaryTextColour;
-        }
-
-        .heading {
-            z-index: -1;
         }
     }
 }
