portfolio updates :white_heart:

--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -13,10 +13,10 @@ body {
     font-family: $primaryFontFamily;
     color: $primaryTextColour;
     background-color: $backgroundColour;
-    background-image: radial-gradient($primaryTextColour, $backgroundColour 2px, transparent 40px),
-                      radial-gradient($primaryTextColour, $backgroundColour 1px, transparent 30px),
-                      radial-gradient($primaryTextColour, $backgroundColour 2px, transparent 40px),
-                      radial-gradient($primaryTextColour, $backgroundColour 2px, transparent 30px);
+    background-image: radial-gradient($primaryTextColour, $backgroundColour 2px, rgba(255, 255, 255, 0) 2px),
+                      radial-gradient($primaryTextColour, $backgroundColour 1px, rgba(255, 255, 255, 0) 1px),
+                      radial-gradient($primaryTextColour, $backgroundColour 2px, rgba(255, 255, 255, 0) 2px),
+                      radial-gradient($primaryTextColour, $backgroundColour 2px, rgba(255, 255, 255, 0) 1px);
     background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
     background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
