--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -12,36 +12,44 @@
             display: none;
         }
 
-        .hamburger {
-            display: unset;
-            position: relative;
-            left: 0;
-            z-index: 1;
+        .hamburgerMenu {
+            position: fixed;
+            width: 90%;
+            z-index: 2;
+            background-color: $backgroundColour;
             border-bottom: 5px solid $primaryTextColour;
         }
 
+        .hamburger {
+            display: unset;
+        }
+
         .menu {
-            position: static;
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            justify-content: left;
+            top: 80px;
             background: none;
             border: none;
+            width: 0;
             padding: 0;
 
             li {
                 padding-top: 20px;
+                margin: 0;
             }
         }
 
         .background {
-            background-color: $backgroundColourDark;
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             height: 450px;
             width: 450px;
+            z-index: 1;
             border-radius: 50%;
-            transform: translate(-45%, -15%);
+            background-color: $backgroundColour;
+            border: 1px solid $primaryTextColour;
+            transform: translate(-50%, -15%);
         }
 
         .label {
@@ -52,10 +60,6 @@
 
         .label.active {
             color: $primaryTextColour;
-        }
-
-        .heading {
-            z-index: -1;
         }
     }
 
