--- a/styles/style.css
+++ b/styles/style.css
@@ -201,7 +201,7 @@ body {
   font-family: "Roboto", sans-serif;
   color: #fafafa;
   background-color: #212121;
-  background-image: radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px), radial-gradient(#fafafa, #212121 1px, rgba(255, 255, 255, 0) 1px), radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px), radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 1px);
+  background-image: radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px), radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px), radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px), radial-gradient(#fafafa, #212121 2px, rgba(255, 255, 255, 0) 2px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
@@ -304,6 +304,15 @@ footer {
 
 header {
   min-height: 100vh;
+}
+
+header .cursor {
+  position: absolute;
+  left: -5%;
+  height: 2px;
+  width: 2px;
+  border-radius: 50%;
+  background-color: #fafafa;
 }
 
 header ul {
@@ -789,7 +798,7 @@ header .fa-mouse {
     -webkit-box-pack: left;
         -ms-flex-pack: left;
             justify-content: left;
-    top: 70px;
+    top: 65px;
     background: none;
     border: none;
     width: 0;
@@ -803,8 +812,8 @@ header .fa-mouse {
     position: fixed;
     top: 0;
     left: 0;
-    height: 370px;
-    width: 300px;
+    height: 360px;
+    width: 360px;
     z-index: 1;
     border-radius: 50%;
     background-color: #212121;
