portfolio updates :white_heart:

--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -86,7 +86,7 @@
 
             .description {
                 border-left: none;
-                border-top: 1px solid $primaryTextColour;
+                border-top: 2px dotted $primaryTextColour;
                 padding-left: 0;
             }
         }
