--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -10,6 +10,7 @@
             width: 80%;
 
             img {
+                border: 5px solid $inactiveTextColour;
                 border-radius: 5px;
             }
         }
